# pybottle

./: .gitignore  LICENSE  draft-karpeles-bottle-idcard-01.txt  pyproject.toml
.github/workflows/: tests.yml
src/pybottle/: __init__.py  idcard.py
tests/: __init__.py
